# sabbat-tools

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README-ES.md  README.ES.md  README.md  cronaudit.py  patch  patch_loganalyce_multicodec.diff  pruebas.txt  pypoject.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tree.txt
.github/workflows/: ci.tml  ci.yml  toc.yml
docs/: FILEINSPECT-ES.md  FILEINSPECT.md  LOGANALYCE-ES.md  LOGANALYCE.md  NETINSPECT-ES.md  NETINSPECT-TROUBLESHOOTING-ES.md  NETINSPECT-TROUBLESHOOTING.md  NETINSPECT.md  SYSCHECK-ES.md  SYSCHECK.md
sabbat_tools/: __init__.py  fileinspect.py  loganalyce.py  netinspect.py  patch_loganalyce_multicompress.diff  syscheck.py
sabbat_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: download_geolite.py  gen_toc.py  verify_extras.py
tests/: conftest.py  pach1  pysql  test_fileinspect.py  test_loganalyce.py  test_loganalyce_codecs.py  test_netinspect.py  test_syscheck.py
