[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sabbat-tools"
version = "0.3.1"
description = "CLI toolbox: sabbat-loganalyce & sabbat-fileinspect"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Óscar Giménez Blasco" }
]
keywords = ["cli", "logs", "security", "forensics", "sysadmin", "devops", "sre"]

# Dependencias base (deja vacío para arranque minimalista)
dependencies = []

[project.optional-dependencies]
geoip = ["geoip2>=4.6.0"]
images = ["Pillow>=10.0.0"]
detect = [
  "chardet>=5.1.0",
  "python-magic>=0.4.27; platform_system != 'Windows'",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'"
]
hardened = ["regex>=2024.5.15"]

[project.scripts]
sabbat-loganalyce = "sabbat_tools.loganalyce:cli_main"
sabbat-fileinspect = "sabbat_tools.fileinspect:cli_main"
sabbat-syscheck = "sabbat_tools.syscheck:cli_main"
sabbat-netinspect = "sabbat_tools.netinspect:cli_main"

[project.urls]
Homepage = "https://github.com/Sabbat-cloud/sabbat-tools"
Issues = "https://github.com/Sabbat-cloud/sabbat-tools/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sabbat_tools*"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-select = ["I"]

